# iris

./: .gitignore  LICENSE  LICENSE.md  README.md  requirements.txt  setup.cfg  setup.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  iris.recipes.rst  iris.rst  structure.rst
docs/source/_static/: custom.css
docs/source/_templates/: layout.html
iris/: core.py  forcefully_redirect_stdout.py  imagemaster_hardware_config.yaml  liveplot.py  plotpanels.py  plotting.py  prysm_wrapper.py  rings.py  util.py  utilities.py  worker.py
iris/data/: __init__.py  database.py  persistent_queue.py
iris/gui/: opt_scrubber.py
iris/macros/: __init__.py  axis.py  main.py
iris/recipes/: __init__.py  axis.py  axis_solve.py  main.py
pyphase/: __init__.py  core.py  forcefully_redirect_stdout.py  lensopt.py  livemessenger.py  liveplot.py  mongoq.py  persistent_queue.py  plotpanels.py  plotting.py  prysm_wrapper.py  recipes.py  scrap.py  util.py
pyphase/recipes/: __init__.py  axis_solve.py
thesis_scripts/: clusterastig.yml  clusterastigm.yml  clustercoma.yml  clustergrid.yml  launcher.py  launcher.sh  launcher_arbitrary.py  launcher_ast.sh  launcher_cma.py  launcher_cma.sh  launcher_sph.py  launcher_sph_single.py  make_arbitrary_sph_coma_astig_queue.py  make_coma_astigmatism_queue.py  make_costfunction_comparison_queues.py  make_single_sph_queue.py  mtf_wfs_can35.py  multicore_test.py  scattershot_launcher.sh
thesis_scripts/data/arbitrary-coma-astigmatism/: queue.pkl
thesis_scripts/data/arbitrary-spherical-coma-astigmatism/: queue.pkl
(+3 files in other folders)
