[metadata]
name = iris
version = 0.1
author = Brandon Dube
author-email = brandon@retrorefractions.com
home-page = https://github.com/brandondube/iris
description = a python wavefront sensing module
long-description = file: README.md
license = MIT
platform = any
keywords =
    wavefront sensing
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = true
include_package_date = true
packages = iris
python_requires = >= 3.6
tests_require = pytest
test_suite = tests
setup_requires = setuptools >= 38.3.0
install_requires =
    numpy
    scipy
    pandas
    "prysm == 0.12.2"

[options.packages.find]
exclude = tests/, docs

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
